Fixed broken infinite scroll

--- a/src/css/components/_selection.scss
+++ b/src/css/components/_selection.scss
@@ -16,8 +16,8 @@ $item-spacing: 24px;
 
 .selectionItem {
   display: inline-block;
-  margin-left: $item-spacing;
-  margin-right: 1rem;
+  padding-left: $item-spacing;
+  padding-right: 1rem;
 
   &_index {
     display: inline-block;
@@ -27,13 +27,11 @@ $item-spacing: 24px;
     line-height: 100%;
     letter-spacing: 1px;
     vertical-align: text-top;
-    transition: all 0.5s ease;
   }
   &_title {
     @include heroFont;
     display: inline-block;
     vertical-align: text-top;
-    transition: all 0.5s ease;
   }
   &_line {
     display: inline-block;
@@ -42,6 +40,5 @@ $item-spacing: 24px;
     margin-left: $item-spacing;
     border-bottom: 2px solid $black;
     vertical-align: text-top;
-    transition: all 0.5s ease;
   }
 }
